trying to fix a bug (collapsed margin on Safari)

--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@ h3 {font-size: 24px;
     margin-left: auto;
     margin-right: auto;}
 
-.features {position: relative; height: 2200px;}
+.features {position: relative; height: 2200px; margin-bottom: -25px;}
 
 .features:before {transform: skewY(8deg);
                   content: "";
@@ -231,8 +231,8 @@ h3 {font-size: 24px;
 
 footer        {background-color: #07043b;
                color: white;
-               padding-top: 290px;
-               margin-top: -150px;
+               padding-top: 200px;
+               margin-top: 0px;
                position: absolute;
                z-index: -3;}
 
